Charge report & Discharge report save done

--- a/NBL/Areas/Services/Views/Shared/_ServiceExecutiveMenuPartialPage.cshtml
+++ b/NBL/Areas/Services/Views/Shared/_ServiceExecutiveMenuPartialPage.cshtml
@@ -87,6 +87,7 @@
                 <li>@Html.ActionLink("  Entry", "Receive", "WarrantyBattery", new { area = "Services" }, new { @class = "fa fa-plus" })</li>
                 <li>@Html.ActionLink("  View All", "All", "WarrantyBattery", new { area = "Services" }, new { @class = "fa fa-eye" })</li>
                 <li>@Html.ActionLink("  Charge Report Entry", "ProductInChargeSection", "WarrantyBattery", new { area = "Services" }, new { @class = "fa fa-eye" })</li>
+                <li>@Html.ActionLink("  Discharge Report Entry", "ProductInDisChargeSection", "WarrantyBattery", new { area = "Services" }, new { @class = "fa fa-eye" })</li>
             </ul>
         </li>
         @*<li class="treeview">
