--- a/NBL/Areas/Services/Views/WarrantyBattery/All.cshtml
+++ b/NBL/Areas/Services/Views/WarrantyBattery/All.cshtml
@@ -10,6 +10,7 @@
         <thead>
         <tr>
             <th>  Receive Ref</th>
+            <th>  Received At</th>
             <th>  Receive Date</th>
             <th>  Product Name</th>
             <th>  Segment</th>
@@ -23,6 +24,7 @@
         {
             <tr>
                 <td>@item.ReceiveRef</td>
+                <td>@item.ReceiveByBranch</td>
                 <td>@item.ReceiveDatetime</td>
                 <td>@item.ProductName</td>
                 <td>@item.ProductCategoryName</td>
@@ -42,6 +44,7 @@
         <tfoot>
         <tr>
             <th>  Receive Ref</th>
+            <th>  Received At</th>
             <th>  Receive Date</th>
             <th>  Product Name</th>
             <th>  Segment</th>
