--- a/NBL/Areas/Services/Views/WarrantyBattery/ProductInChargeSection.cshtml
+++ b/NBL/Areas/Services/Views/WarrantyBattery/ProductInChargeSection.cshtml
@@ -10,6 +10,7 @@
         <thead>
         <tr>
             <th>  Receive Ref</th>
+            <th>  Receive At</th>
             <th>  Receive Date</th>
             <th>  Product Name</th>
             <th>  Segment</th>
@@ -22,6 +23,7 @@
         {
             <tr>
                 <td>@item.ReceiveRef</td>
+                <td>@item.ReceiveByBranch</td>
                 <td>@item.ReceiveDatetime</td>
                 <td>@item.ProductName</td>
                 <td>@item.ProductCategoryName</td>
@@ -35,6 +37,7 @@
         <tfoot>
         <tr>
             <th>  Receive Ref</th>
+            <th>  Receive At</th>
             <th>  Receive Date</th>
             <th>  Product Name</th>
             <th>  Segment</th>
